| Bug #47215 | Incorrectly computed pool-size can cause node crash during create table | ||
|---|---|---|---|
| Submitted: | 9 Sep 2009 10:12 | Modified: | 9 Sep 2009 16:44 |
| Reporter: | Jonas Oreland | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S3 (Non-critical) |
| Version: | mysql-5.1-telco-7.0 | OS: | Any |
| Assigned to: | Jonas Oreland | CPU Architecture: | Any |
[9 Sep 2009 10:12]
Jonas Oreland
[9 Sep 2009 11:04]
Bugs System
Pushed into 5.1.35-ndb-7.1.0 (revid:jonas@mysql.com-20090909110427-4vsmv05b2i6svff9) (version source revid:jonas@mysql.com-20090909110427-4vsmv05b2i6svff9) (merge vers: 5.1.35-ndb-7.1.0) (pib:11)
[9 Sep 2009 11:06]
Bugs System
Pushed into 5.1.37-ndb-7.0.8 (revid:jonas@mysql.com-20090909110150-kdvot0410na89hk5) (version source revid:jonas@mysql.com-20090909105810-v3bws3srdbkdi3rx) (merge vers: 5.1.37-ndb-7.0.8) (pib:11)
[9 Sep 2009 13:12]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/82824 2996 Jonas Oreland 2009-09-09 ndb - bug#47215 1) Fix so that CREATE_TAB_REF doesnt cause node-crash 2) Fix calculation of TUP_TABLE_DESC by moving to TUP that knows how compute it
[9 Sep 2009 16:44]
Jon Stephens
Documented bugfix in the NDB-7.0.8 changelog as follows:
The size of the table descriptor pool used in the DBTUP kernel
block was incorrect. This could lead to a data node crash when
an LQH sent a CREATE_TAB_REF signal.
Closed.
