ndb - bug#47215   1) Fix so that CREATE_TAB_REF doesnt cause node-crash   2) Fix calculation of TUP_TABLE_DESC by moving to TUP      that knows how compute it